# deep-research

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  PIPELINE_VISUALIZATION.md  README.md  docker-compose.yml  pyproject.toml  research-report (1).md
app/: config.py  main.py
app/agents/: analyst.py  citation_verifier.py  deduplicator.py  gap_integrator.py  gap_researcher.py  graph.py  planner.py  prompts.py  researcher.py  reviewer.py  state.py  summarizer.py  writer.py
app/api/: routes.py  schemas.py
app/llm/: client.py
app/tools/: arxiv_search.py  jina_reader.py  models.py  reddit_search.py  retry.py  tavily_search.py  twitter_search.py  web_search.py  wikipedia_search.py  youtube_search.py  youtube_transcript.py
docs/superpowers/plans/: 2026-03-28-frontend.md
docs/superpowers/specs/: 2026-03-28-frontend-design.md  2026-04-01-frontend-redesign-design.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/components/: AgentCard.tsx  AgentMessage.tsx  ChatArea.tsx  ChatInput.tsx  EEATBadge.tsx  ErrorBoundary.tsx  PipelinePanel.tsx  ReportPanel.tsx  SearchBar.tsx  Sidebar.tsx  SourceItem.tsx  ThemeToggle.tsx  UserMessage.tsx
frontend/src/components/ui/: anomalous-matter-hero.tsx  (+3 more)
frontend/src/contexts/: ThemeContext.tsx
frontend/src/hooks/: useAnimate.ts  useResearch.ts  useSessionStore.ts
frontend/src/lib/: api.ts  db.ts  parseReport.ts
frontend/src/test/: parseReport.test.ts
tests/: test_agents.py  test_api.py  test_tools.py
